✨ add play source select panel

--- a/android/app/src/main/res/layout/media_page.xml
+++ b/android/app/src/main/res/layout/media_page.xml
@@ -1,179 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
 <top.ourfor.app.iplayx.view.LifecycleHolder xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/media_scroll_view"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent" >
-<ScrollView
-    android:id="@+id/scroll_view"
-    android:scrollbars="none"
-    android:background="@drawable/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/poster_image"
+    <ScrollView
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:contentDescription="@string/movie_post"
-        android:scaleType="centerCrop"
-        app:layout_constraintDimensionRatio="4:3"
-        android:src="@drawable/hand_drawn_3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/player_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintDimensionRatio="4:3"
-        app:layout_constraintTop_toTopOf="@id/poster_image"
-        app:layout_constraintBottom_toBottomOf="@id/poster_image"
-        app:layout_constraintLeft_toLeftOf="@id/poster_image"
-        app:layout_constraintRight_toRightOf="@id/poster_image"
-        />
+        android:layout_height="match_parent"
+        android:background="@drawable/bg"
+        android:scrollbars="none">
 
-    <com.google.android.flexbox.FlexboxLayout
-        android:id="@+id/play_action"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:justifyContent="center"
-        app:alignContent="center"
-        app:flexWrap="wrap"
-        app:layout_constraintTop_toBottomOf="@id/poster_image"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp">
-        <com.google.android.flexbox.FlexboxLayout
-            android:layout_width="0dp"
-            android:id="@+id/tag_list"
-            android:layout_height="match_parent"
-            app:flexDirection="row"
-            app:layout_flexGrow="1"
-            app:layout_flexShrink="0"
-            app:flexWrap="wrap"
-            />
-    </com.google.android.flexbox.FlexboxLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <top.ourfor.app.iplayx.view.infra.TextView
-        android:id="@+id/episode_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/episode_title"
-        app:layout_constraintTop_toBottomOf="@id/play_action"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:textSize="16sp"
-        />
+            <ImageView
+                android:id="@+id/poster_image"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:contentDescription="@string/movie_post"
+                android:scaleType="centerCrop"
+                android:src="@drawable/hand_drawn_3"
+                app:layout_constraintDimensionRatio="4:3"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/player_container"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@id/poster_image"
+                app:layout_constraintDimensionRatio="4:3"
+                app:layout_constraintLeft_toLeftOf="@id/poster_image"
+                app:layout_constraintRight_toRightOf="@id/poster_image"
+                app:layout_constraintTop_toTopOf="@id/poster_image" />
+
+            <com.google.android.flexbox.FlexboxLayout
+                android:id="@+id/play_action"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                app:alignContent="center"
+                app:flexWrap="wrap"
+                app:justifyContent="center"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/poster_image">
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/tag_list"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    app:flexDirection="row"
+                    app:flexWrap="wrap"
+                    app:layout_flexGrow="1"
+                    app:layout_flexShrink="0" />
+            </com.google.android.flexbox.FlexboxLayout>
+
+            <top.ourfor.app.iplayx.view.infra.TextView
+                android:id="@+id/episode_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="@string/episode_title"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/play_action" />
+
+            <top.ourfor.app.iplayx.view.video.PlayerControlItemView
+                android:id="@+id/watch_button"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:text="@string/watch_button"
+                app:cornerRadius="32dp"
+                app:layout_constraintBottom_toBottomOf="@id/poster_image"
+                app:layout_constraintLeft_toLeftOf="@id/poster_image"
+                app:layout_constraintRight_toRightOf="@id/poster_image"
+                app:layout_constraintTop_toTopOf="@id/poster_image"
+                app:size="64dp"
+                app:src="@drawable/ic_fluent_play_48_filled" />
+
+            <top.ourfor.app.iplayx.view.infra.TextView
+                android:id="@+id/overviewLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="center"
+                android:text="Overview"
+                android:textColor="@color/secondary"
+                android:textSize="13sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/episode_label" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/season_pager"
+                android:layout_width="match_parent"
+                android:layout_height="290dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/overviewLabel">
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/season_tab"
+                    style="@style/SeasonTabStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:background="@null"
+                    android:paddingBottom="10dp"
+                    app:tabGravity="start"
+                    app:tabMode="scrollable" />
+            </androidx.viewpager.widget.ViewPager>
+
+            <top.ourfor.app.iplayx.view.infra.TextView
+                android:id="@+id/actor_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:text="@string/actor_title"
+                android:textColor="@color/primary"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/season_pager" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/actor_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="5dp"
+                android:minHeight="90dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/actor_label" />
+
+            <top.ourfor.app.iplayx.view.infra.TextView
+                android:id="@+id/similar_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="15dp"
+                android:text="@string/similar_title"
+                android:textColor="@color/primary"
+                android:textSize="18sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/actor_list" />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/similar_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="5dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/similar_label" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
     <top.ourfor.app.iplayx.view.video.PlayerControlItemView
-        android:id="@+id/watch_button"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        app:src="@drawable/ic_fluent_play_48_filled"
-        app:cornerRadius="32dp"
-        app:size="64dp"
-        app:layout_constraintTop_toTopOf="@id/poster_image"
-        app:layout_constraintLeft_toLeftOf="@id/poster_image"
-        app:layout_constraintRight_toRightOf="@id/poster_image"
-        app:layout_constraintBottom_toBottomOf="@id/poster_image"
-        android:text="@string/watch_button"
-        />
-
-    <top.ourfor.app.iplayx.view.infra.TextView
-        android:id="@+id/overviewLabel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Overview"
-        app:layout_constraintTop_toBottomOf="@id/episode_label"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:id="@+id/player_config"
+        app:cornerRadius="18dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textColor="@color/secondary"
-        android:textSize="13sp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="15dp"
-        android:gravity="center"
-        />
-
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/season_pager"
-        android:layout_width="match_parent"
-        android:layout_height="290dp"
-        app:layout_constraintTop_toBottomOf="@id/overviewLabel"
-        app:layout_constraintLeft_toLeftOf="parent">
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/season_tab"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/SeasonTabStyle"
-            android:background="@null"
-            app:tabMode="scrollable"
-            app:tabGravity="start"
-            android:layout_gravity="top"
-            android:paddingBottom="10dp"
-            />
-    </androidx.viewpager.widget.ViewPager>
-
-    <top.ourfor.app.iplayx.view.infra.TextView
-        android:id="@+id/actor_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/actor_title"
-        app:layout_constraintTop_toBottomOf="@id/season_pager"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="18sp"
-        android:textColor="@color/primary"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/actor_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/actor_label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:minHeight="90dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        />
-
-    <top.ourfor.app.iplayx.view.infra.TextView
-        android:id="@+id/similar_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/similar_title"
-        app:layout_constraintTop_toBottomOf="@id/actor_list"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:textSize="18sp"
-        android:textColor="@color/primary"
-        android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
-        />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/similar_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/similar_label"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="15dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
-        />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+        app:size="36dp"
+        app:src="@drawable/ic_fluent_settings_24_filled" />
 </top.ourfor.app.iplayx.view.LifecycleHolder>
