--- a/android/app/src/main/res/layout/player_config_panel.xml
+++ b/android/app/src/main/res/layout/player_config_panel.xml
@@ -90,13 +90,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/play"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/subtitle_source"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginHorizontal="15dp"
         android:layout_marginVertical="20dp"
+        android:background="@drawable/button_state"
+        android:backgroundTint="@color/onBackground_mediumContrast"
+        android:textColor="@color/onPrimary"
         />
 
     <com.airbnb.lottie.LottieAnimationView
