--- a/android/app/src/main/res/drawable/dialog_alpha_bg.xml
+++ b/android/app/src/main/res/drawable/dialog_alpha_bg.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-<solid android:color="@color/background"/>
+<solid android:color="@color/background_alpha_50"/>
     <corners android:radius="10dp"/>
 </shape>
