--- a/android/app/src/main/res/layout/player_config_panel.xml
+++ b/android/app/src/main/res/layout/player_config_panel.xml
@@ -28,6 +28,7 @@
         app:layout_constraintTop_toBottomOf="@id/video_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/bg_spinner"
         />
 
     <top.ourfor.app.iplayx.view.infra.TextView
@@ -55,6 +56,7 @@
         app:layout_constraintTop_toBottomOf="@id/audio_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/bg_spinner"
         />
 
     <top.ourfor.app.iplayx.view.infra.TextView
@@ -82,6 +84,7 @@
         app:layout_constraintTop_toBottomOf="@id/subtitle_label"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:background="@drawable/bg_spinner"
         />
 
 
