🐛 update default exception handler

--- a/android/app/src/main/res/layout/site_line_manage.xml
+++ b/android/app/src/main/res/layout/site_line_manage.xml
@@ -85,7 +85,7 @@
         />
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/add_line_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_site"
