💄 add default app ui font

--- a/android/app/src/main/res/layout/about_page.xml
+++ b/android/app/src/main/res/layout/about_page.xml
@@ -7,6 +7,7 @@
         android:id="@+id/logo_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/app_logo"
         android:src="@mipmap/ic_launcher_round"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -14,12 +15,12 @@
         android:layout_marginTop="150dp"
         />
 
-    <TextView
+    <top.ourfor.app.iplayx.view.infra.TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="22dp"
+        android:textSize="22sp"
         android:textColor="@color/onBackground"
         app:layout_constraintTop_toBottomOf="@id/logo_image"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,12 +28,12 @@
         android:layout_marginTop="30dp"
         />
 
-    <TextView
+    <top.ourfor.app.iplayx.view.infra.TextView
         android:id="@+id/version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/version"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/secondary"
         app:layout_constraintTop_toBottomOf="@id/app_name"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,12 +41,12 @@
         android:layout_marginTop="10dp"
         />
 
-    <TextView
+    <top.ourfor.app.iplayx.view.infra.TextView
         android:id="@+id/app_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_description"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/onBackground"
         app:layout_constraintTop_toBottomOf="@id/version"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -53,12 +54,12 @@
         android:layout_marginTop="10dp"
         />
 
-    <TextView
+    <top.ourfor.app.iplayx.view.infra.TextView
         android:id="@+id/app_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_note"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:textColor="@color/secondary"
         app:layout_constraintTop_toBottomOf="@id/app_description"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -66,11 +67,14 @@
         android:layout_marginTop="10dp"
         />
 
-    <Button
+    <top.ourfor.app.iplayx.view.infra.Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/check_update"
         android:id="@+id/check_update_button"
+        android:background="@drawable/button_state"
+        android:backgroundTint="@color/onBackground_mediumContrast"
+        android:textColor="@color/onPrimary"
         app:layout_constraintTop_toBottomOf="@id/app_note"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
