--- a/android/app/src/main/res/layout/setting_cell.xml
+++ b/android/app/src/main/res/layout/setting_cell.xml
@@ -51,7 +51,7 @@
         android:thumb="@drawable/selector_thumb"
         />
 
-    <Button
+    <top.ourfor.app.iplayx.view.infra.Button
         android:id="@+id/setting_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,6 +60,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/button_state"
+        android:backgroundTint="@color/onBackground_mediumContrast"
+        android:textColor="@color/onPrimary"
+        android:layout_marginLeft="15dp"
         android:layout_marginRight="10dp"
         />
 
